# shakespeare-babbler

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  build_docker.sh  pyproject.toml  run_docker.sh  shakespeare_babbler.py  text_generator.py  train_language_model.py
config/: shakespeare-babbler.yaml
src/shakespeare_babbler/transformer_model/: feed_forward.py  multi_head_attention.py  transformer_block.py  transformer_model.py
src/shakespeare_babbler/utils/: __init__.py  text_dataset_loader.py  transformer_trainer.py
transformer_model/: __init__.py  attention_head.py
utils/: __init__.py  text_dataset_loader.py  transformer_trainer.py
